--- a/pomodoro_app/lib/lang/app_en.arb
+++ b/pomodoro_app/lib/lang/app_en.arb
@@ -14,5 +14,9 @@
   "longBreak": "Long break",
   "@longBreak":{
     "description": "a long break timer"
+  },
+  "nameTask": "Name of the task",
+  "@nameTask":{
+    "description": "a name task"
   }
 }
